made request checks case insensitive, added list of active threads, moved request loop into server, made example rest (hello) return html